2013-01-29 Roman
- SYS.Function: Remove execution measurement from TValFunc.
- SYS.Function, DAQ.{BlockCalc,DiamondBoards,LogicLev}:
    Execution measurement is made planed by user request and moved to system counters container.


2013-01-28 Roman
- !:FIX:Function: Remove function gettimeofday() twice call on it execution time measurement, for each calls.
    Add the function execution time limit to 10 seconds.
- FIX:Security: Group tab's name is fixed.
- SYS: Translation for core update.
- FIX:SYS: configure.in fixed for remove keyword "include". Detected on old aclocal.
- SYS:ModSched: Fields "ModAllow" and "ModDeny" open for edit and save its to config-file.
- SYS: Start script "openscada_start" adapted for start different projects by set variable "OSCADA_ProjName" to project name,
    like "OSCADA_ProjName=MyProjName openscada_start".
- UI.VCAEngine: Brackets '' processing into syntax highlight rules for XHTML tag's attribute is added.
- UI.Vision, UI.WebVision: Default loadable tag for primitive "Document" set to "body".


2013-01-27 Roman
- SYS: Work DB for "Start" project change to "start/St.db".
- FIX:SYS: Document filename fix for "moduleCreation.pdf".
- DB, DB.*: Editable control object's configuration fields depends from "Enable" state is added for DB object.
    Some charsets list for field "CODEPAGE" is added.
- DAQ.LogicLev: Editable control for Controller object's configuration fields depends from "Start" state is added.
- DAQ.SMH2Gi: Directory ./data/*.ini append to repository.


2013-01-26 Roman
- DAQ.Templates, DAQ.LogicLev, DAQ.ModBus, DAQ.Siemens:
    IO type sets to "Text" and display its into DAQ attributes and template's constants.
- DAQ.DiamondBoards: Processed AI numbers strict is added from asserted for the board. Read DIO by ports (bytes) is added.
- Transport.Serial: Editable control object's configuration fields depends from "Start" state is added for input transport.