@@ -160,8 +160,7 @@ class TMdContr: public TController
 
 	bool	prc_st,				// Process task active
 		call_st,        		// Calc now stat
-		endrun_req,			// Request to stop of the Process task
-		exec_calc;			// Request for execution time measurement
+		endrun_req;			// Request to stop of the Process task
 	vector< AutoHD<TMdPrm> >  p_hd;
 
 	double	mPer;
